src/test/deca/context/valid/print/println-int.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    2

{
    println(2);
}