src/test/deca/context/invalid/autre/this-main.deca
// Description:
//    Programme invalide.
//
// Resultats:
//    erreur ligne 8

{
    this;
}